<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.FrameLayout">

    <LinearLayout
        android:id="@+id/loginSocialLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/socialTwitterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                app:backgroundTint="@color/color_twitter"
                app:icon="@drawable/twitter_logo_icon"
                app:iconPadding="10dp"
                app:iconSize="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/socialFacebookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                app:backgroundTint="@color/color_facebook"
                app:icon="@drawable/facebook_logo_icon"
                app:iconSize="32dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/socialGithubButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github"
                app:backgroundTint="@color/color_github"
                app:icon="@drawable/github_logo_icon"
                app:iconPadding="15dp"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/socialGoogleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/google"
                app:backgroundTint="@color/color_google"
                app:icon="@drawable/google_logo_icon"
                app:iconSize="24dp" />

        </LinearLayout>

    </LinearLayout>

</merge>