<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/socialActivityRootView"
    android:background="@drawable/login_screen_background"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginTopLogoImageView"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/login_top_background" />

        <TextView
            android:id="@+id/loginWelcomeBackTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_back"
            android:textAppearance="?textAppearanceHeadline4"
            android:textColor="?colorOnSurface" />

        <TextView
            android:id="@+id/loginSubtitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/log_into_your_existing_account"
            android:textAppearance="?textAppearanceSubtitle2" />

        <include layout="@layout/social_merge_button_layout" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginBottomSignUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_about"
            android:textAppearance="?textAppearanceBody2" />

        <TextView
            android:id="@+id/loginPreviousLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/previous_login"
            android:textAppearance="?textAppearanceOverline"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
