<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/customSimpleDialogTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textAppearance="?textAppearanceHeadline6"
        tools:text="@string/limited_internet_connection" />

    <TextView
        android:id="@+id/customSimpleDialogContentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        tools:text="@string/internet_not_working"
        android:textAppearance="?textAppearanceBody2" />

    <ImageView
        android:id="@+id/customSimpleDialogContentDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_divider_dark_theme"
        android:contentDescription="@null"
        app:backgroundTint="@color/color_on_surface_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/centeredSimpleDialogNegativeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            tools:text="@string/cancel"
            android:textAppearance="?textAppearanceOverline"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/centeredSimpleDialogContentActionButtonDivider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/md_divider_dark_theme"
            android:contentDescription="@null"
            android:visibility="gone"
            app:backgroundTint="@color/color_on_surface_divider" />

        <TextView
            android:id="@+id/centeredSimpleDialogPositiveTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            tools:text="@string/try_again"
            android:textAppearance="?textAppearanceOverline" />

    </LinearLayout>

</LinearLayout>